# cpphomeworks

homeworks/example_homework/homework_1/: hello.cpp
homeworks/homework_1/hello_world/: hello.cpp
homeworks/homework_2/fortune_teller/: fortune_teller.cpp
homeworks/homework_3/guessing_game/: guessing_game.cpp
homeworks/homework_4/no_strings_attached/: .clangd  CMakeLists.txt  readme.md
homeworks/homework_4/no_strings_attached/examples/: CMakeLists.txt  split_strings.cpp  trim_strings.cpp
homeworks/homework_4/no_strings_attached/no_strings_attached/: CMakeLists.txt  string_split.cpp  string_split.h  string_split_test.cpp  string_trim.cpp  string_trim.h  string_trim_test.cpp
homeworks/homework_5/pixelator/examples/: CMakeLists.txt
homeworks/homework_5/pixelator/pixelator/: CMakeLists.txt  drawer.cpp  drawer.hpp  image.cpp  image.hpp  pixelate_image.cpp  pixelate_image.hpp  pixelator_test.cpp  stb_image_data_view.cpp  stb_image_data_view.hpp
